<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DEMO: SM Calculator Lock</string>
    <string name="ac">AC</string>
    <string name="fa_backspace"></string>
    <string name="percent">%</string>
    <string name="fa_divide"></string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="fa_multiply"></string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="fa_minus"></string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition">+</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="e">e</string>
    <string name="fa_history"></string>
    <string name="fa_privacy"></string>
    <string name="back">Back</string>
    <string name="calculator_history">Calculator History</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="no_history">No history</string>
    <string name="privacy_notice">Thank you for choosing SM Calculator Lock. This privacy notice is intended to inform you about how we collect, use, and disclose your personal information while using our application.\n\n1. Data Collection and Processing:\n   - SM Calculator Lock is a file lock application that does not collect or process any user data, including but not limited to name, phone ID, phone number, or email ID. We are committed to maintaining your privacy and ensuring that your personal information remains secure.\n\n2. Permissions:\n   - The application requires \"All files permission\" of Android to function properly, as it attempts to manage files for the user. Additionally, it requires permissions to access Photo, Video, and Audio files to query the Media manager for locking purposes. These permissions are essential for the app\'s core functionality and are used solely for the intended purpose of managing files on your device.\n\n3. Advertising:\n   - SM Calculator Lock may display AdMob advertisements. By using the app, you agree to AdMob\'s terms and conditions regarding the use of their advertising services. Please refer to AdMob\'s privacy policy for more information on how they collect, use, and disclose your information.\n\n4. Developer Disclaimer:\n   - SM Calculator Lock is developed by external developers and published by a third party. While we strive to ensure the reliability and security of our application, we cannot guarantee that it will be error-free or that it will meet all users\' expectations. Therefore, by using SM Calculator Lock, you acknowledge that the developers and publishers are not liable for any harm, damage, or loss caused by the use of this application.\n\n5. Contact Us:\n   - If you have any questions, concerns, or feedback regarding this privacy notice or our application, please feel free to contact us from Google Play store.\n\nBy continuing to use SM Calculator Lock, you agree to the terms outlined in this privacy notice. We appreciate your trust in our application and are committed to protecting your privacy and providing you with a safe and secure user experience.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="welcome_let_s_get_started">Welcome! Let\'s get started</string>
    <string name="privacy_read_notice">By using the application, you will agree to the following terms and contions. Please read them carefully.</string>
    <string name="don_t_agree">Don\'t agree</string>
    <string name="continue_text">Continue</string>
    <string name="setup_pin">Setup PIN</string>
    <string name="enter_pin">Enter a 4 digit PIN to setup file lock</string>
    <string name="pin_empty">----</string>
    <string name="confirm_your_pin">Confirm your pin</string>
    <string name="draw_your_pattern">Draw Your Pattern</string>
    <string name="draw_your_patern_to_complete_action">Draw your pattern to complete action</string>
    <string name="setup_a_new_pattern_for_pin_recovery">Setup a new pattern for PIN recovery and App Lock</string>
    <string name="draw_again_to_confirm">Draw again to confirm</string>
    <string name="menu">Menu</string>
    <string name="vault">Vault</string>
    <string name="vault_pin">Vault PIN</string>
    <string name="change">Change</string>
    <string name="change_pin">Change PIN</string>
    <string name="change_pattern">Change Pattern</string>
    <string name="change_pin_message">Your vault is locked with your PIN. You can change your PIN or change the PIN recovery pattern.</string>
    <string name="fa_lock"></string>
    <string name="fa_apps"></string>
    <string name="fa_folder"></string>
    <string name="folder_file">Folder/File</string>
    <string name="empty_folder">Empty folder</string>
    <string name="home">Home</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="loading">Loading…</string>
    <string name="empty_text">Empty!</string>
    <string name="failed_to_load">Failed to load!</string>
    <string name="fa_cog"></string>
    <string name="sort_by">Sort by</string>
    <string name="explorer_settings">Explorer Settings</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="show_hidden_files">Show hidden files</string>
    <string name="apps">Apps</string>
    <string name="url_status">Url Status</string>
    <string name="enter_url">Enter URL…</string>
    <string name="failed_to_load_page">Failed to load page</string>
    <string name="try_again">Try again</string>
    <string name="incognito_message">You are in Incognito Mode, your browsing history, passwords or cookies will not be saved. Your activity isn\'t hidden from websites you visit, your employer or your internet service provider.</string>
    <string name="incognito_mode">Incognito Mode</string>
    <string name="download">Download</string>
    <string name="explorer">Explorer</string>
    <string name="app">App</string>
    <string name="enter_pin_2">Enter PIN</string>
    <string name="enter_your_pin_to_unlock_the_app">Enter your PIN to unlock the app</string>
    <string name="draw_your_pattern_to_unlock_the_app">Draw your pattern to unlock the app.</string>
    <string name="accessibility_service_description">App Lock Accessibility Service</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="app_icon">App icon</string>
    <string name="wrong_pattern_try_again">Wrong pattern! Try again.</string>
    <string name="loading_apps">Loading apps…</string>
    <string name="unknown_file_folder">Unknown file/folder</string>
    <string name="no_information">No information</string>
    <string name="lock_icon">Lock icon</string>
    <string name="lock_files">Lock files</string>
    <string name="unlock_files">Unlock files</string>
    <string name="untitled">Untitled</string>
    <string name="file_vault">File vault</string>
    <string name="goto_explorer_to_add_files_to_vault">Goto \'Explorer\' or Add+ files to vault.</string>
    <string name="loading_vault">Loading vault…</string>
    <string name="menu_icon">Menu icon</string>
    <string name="developed_amp_designed_by_unicore_softwares_llc"><![CDATA[Developed & Designed by UniCore Softwares LLC]]></string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="add">Add +</string>
    <string name="all_files">All files</string>
    <string name="select_all">Select all</string>
    <string name="goto_explorer_to_add_files_to_vault_2">Goto \'Explorer\' to add files to vault.</string>
    <string name="select_files">Select files</string>
    <string name="lock">Lock</string>
    <string name="app_lock">App lock</string>
</resources>