<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorPages.CalculatorHistory">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:background="@color/midnight_black"
      android:elevation="2dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/back"
        android:contentDescription="@string/back" />

    <TextView
        android:fontFamily="@font/trebuc"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center|start"
        android:text="@string/calculator_history"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/history_delete"
        android:contentDescription="@string/delete" />

  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:background="@color/midnight_black_button"
      android:layout_marginTop="60dp"
      android:id="@+id/historyView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>

    <TextView
        android:visibility="gone"
        android:background="@color/midnight_black_button"
        android:gravity="center"
        android:id="@+id/noHistory"
        android:textSize="20sp"
        android:text="@string/no_history"
        android:textColor="@color/white"
        android:fontFamily="@font/trebuc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>