<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnight_black"
    android:orientation="vertical"
    tools:context=".Setup">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_gravity="center"
        android:id="@+id/lottieAnimationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="anim_lock.json"/>

    <TextView
        android:textAlignment="center"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trebuc"
        android:text="@string/welcome_let_s_get_started"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trebuc"
        android:text="@string/privacy_read_notice"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"/>

    <ScrollView
        android:scrollbars="none"
        android:background="@drawable/rounded_back"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="13sp"
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:elevation="1dp"
                android:fontFamily="@font/trebuc"
                android:text="@string/privacy_notice"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:id="@+id/dontAgree"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/gray"
            android:textColor="@color/white"
            android:fontFamily="@font/trebuc"
            android:text="@string/don_t_agree"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/continueButton"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/dark_green"
            android:textColor="@color/white"
            android:fontFamily="@font/trebuc"
            android:text="@string/continue_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>