<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/midnight_black"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_height="60dp">

    <ImageView
        android:id="@+id/icon"
        android:src="@drawable/file_unknown"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/folder_file" />

    <LinearLayout
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/unknown_file_folder"
            android:textColor="@color/white"
            android:id="@+id/name"
            android:ellipsize="middle"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:textSize="16sp"
            android:fontFamily="@font/trebuc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/no_information"
            android:textColor="@color/gray"
            android:id="@+id/info"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:textSize="13sp"
            android:fontFamily="@font/trebuc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/selectionSwitch"
        android:layout_width="50dp"
        android:layout_height="match_parent"/>
</LinearLayout>