<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/midnight_black"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:id="@+id/lottieAnimationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="anim_lock2.json"/>

    <TextView
        android:text="@string/change_pin_message"
        android:id="@+id/message"
        android:padding="10dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:fontFamily="@font/trebuc"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:gravity="center"
        android:padding="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/changePinButton"
            android:backgroundTint="@color/midnight_black_button"
            android:fontFamily="@font/trebuc"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/change_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle" />

        <Button
            android:id="@+id/chagePatternButton"
            android:backgroundTint="@color/midnight_black_button"
            android:fontFamily="@font/trebuc"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/change_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle" />
    </LinearLayout>

</LinearLayout>